# personal-sit-wagtail

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
apps/theme/static_src/: tailwind.config.js
core/: importers.py  models.py  test_importers.py  urls.py  utils.py
core/management/commands/: import_from_microblog.py
core/migrations/: 0001_initial.py  0002_alter_blogarticlepage_date.py  0003_auto_20211121_2101.py
docs/: architecture.md  deployment.md
personal_site/: Dockerfile  manage.py
personal_site/personal_site/: urls.py  wsgi.py
personal_site/personal_site/settings/: base.py  dev.py
personal_site/personal_site/templates/: base.html
personal_site/wagtailperson/: apps.py  blocks.py  models.py  tests.py  wagtail_hooks.py
personal_site/wagtailperson/locale/fr/LC_MESSAGES/: django.mo
personal_site/wagtailperson/migrations/: 0001_initial.py  0002_auto_20190820_1942.py  0003_auto_20190821_1817.py  0004_auto_20190821_2153.py  0005_auto_20200220_1854.py  0006_auto_20200416_1603.py
personal_site/wagtailpress/: apps.py  blocks.py  models.py  tests.py  views.py
personal_site/wagtailpress/migrations/: 0001_initial.py  0002_auto_20190827_1629.py  0003_auto_20190827_1725.py  0004_auto_20190827_1800.py  0005_blogindexpage.py  0006_auto_20190828_1515.py  0007_auto_20190905_1332.py  0008_auto_20191001_1317.py  0009_auto_20200415_1507.py
settings/: base.py  dev.py  s3-bucket-policy.json  testing.py  wsgi.py
templates/: base.html
templates/core/: blog_article_page.html  blog_index_page.html
tests/: test_chrisadams_wagtail.py
(+9 files in other folders)
