[tool.poetry]
name = "chrisadams-wagtail"
version = "0.1.0"
description = ""
authors = ["Chris Adams <chris@productscience.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
wagtail = ">=2.14,<2.15"
Django = ">=3.2,<3.3"
wagtail-bakery = "^0.5.0"
django-tailwind = "^2.2.0"
wagtail-markdown = "^0.7.0"
Pygments = "^2.10.0"
wagtailpress = "^0.12.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"
django-debug-toolbar = "^3.2.2"
rich = "^10.13.0"
django-extensions = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
